@@ -5,11 +5,13 @@ export(confmirt.model)
 export(expand.table)
 export(extract.item)
 export(fscores)
+export(itemfit)
 export(iteminfo)
 export(itemplot)
 export(key2binary)
 export(mirt)
 export(multipleGroup)
+export(personfit)
 export(simdata)
 export(wald)
 exportClasses(ConfirmatoryClass)
