@@ -13,6 +13,12 @@ test_that('dich data', {
     expect_is(cof, 'list')
     sum <- summary(mod1, verbose = FALSE)
     expect_is(sum, 'list')    
+    pfit1 <- personfit(mod1)
+    expect_is(pfit1, 'data.frame')
+    pfit2 <- personfit(mod1, full.scores = TRUE)    
+    expect_is(pfit2, 'data.frame')
+    ifit <- itemfit(mod1)
+    expect_is(ifit, 'data.frame')
 })
 
 
